@@ -19,16 +19,34 @@ public class CSVUlearnReader {
         return modules;
     }
 
+    private int studentId;
+    private int moduleId;
+
+    /**
+     * Открывает и парсит CSV файл по заданному пути.
+     * CSV файл обязательно должен иметь структуру CSV файла выгрузки успеваемости по курсу с ulearn.me.
+     * Полученные данные сохраняются в массивах students и modules данного класса.
+     * @param path Путь до файла
+     * @throws IOException
+     */
     public void read(String path) throws IOException {
         var scanner = new Scanner(new File(path));
 
         var modules = readModules(scanner.nextLine());
-        var studentColsNum = modules.removeFirst().getNumCol();
+        var studentColsNum = modules.stream().findFirst().get().getNumCol();
+        modules.remove(0);
         var titles = scanner.nextLine().split(";");
-        var maxValues = scanner.nextLine().split(";"); // TODO использовать
+        var maxValues = Arrays.stream(scanner.nextLine().split(";")).skip(studentColsNum).toArray(String[]::new);
+
+        var titleModulesData = Arrays.copyOfRange(titles,studentColsNum,titles.length);
+        var col = 0;
+        for (var module : modules) {
+            for (var i = 0; i < module.getNumCol(); i++, col++) {
+                module.setMaxPoints(titleModulesData[col], maxValues[col]);
+            }
+        }
 
         students = new ArrayList<Student>();
-        var titleModulesData = Arrays.copyOfRange(titles,studentColsNum,titles.length);
         while (scanner.hasNextLine()) {
             var line = scanner.nextLine().split(";");
             var studentData = Arrays.copyOfRange(line,0,studentColsNum);
@@ -36,7 +54,7 @@ public class CSVUlearnReader {
 
             var student = readStudentData(titles,studentData);
             students.add(student);
-            readModulesTasksData(student,titleModulesData,modulesData,modules);
+            readModulesTasksData(student,titleModulesData,modulesData,modules,maxValues);
         }
 
         this.modules = new ArrayList<Module>();
@@ -45,6 +63,12 @@ public class CSVUlearnReader {
         }
     }
 
+    /**
+     * Читает и парсит заголовок модулей файла.
+     * @param line Строка с заголовками модулей.
+     * @return Список ModuleParser, в котором содержатся модули и сколько колонок занимает модуль в таблице.
+     * Первым модулем всегда будет Student, необходим для парсинга данных о студентах.
+     */
     private ArrayList<ModuleParser> readModules(String line) {
         var moduleNames = line.split(";", -1);
         moduleNames[0] = ""; // for UTF8-BOM
@@ -53,28 +77,46 @@ public class CSVUlearnReader {
 
         var lastModuleIndex = 0;
         for (var i = 0; i < moduleNames.length; i++) {
+            var numCols = i - lastModuleIndex;
             if (!Objects.equals(moduleNames[i], "")) {
-                modules.add(new ModuleParser(moduleName,i - lastModuleIndex));
+                modules.add(new ModuleParser(moduleName, moduleId, numCols));
+                if (!Objects.equals(moduleName, "Students"))
+                    moduleId += numCols;
                 moduleName = moduleNames[i];
                 lastModuleIndex = i;
             }
 
             if (i == moduleNames.length - 1) {
-                modules.add(new ModuleParser(moduleName,i - lastModuleIndex + 1));
+                modules.add(new ModuleParser(moduleName, moduleId, numCols + 1));
             }
         }
         return modules;
     }
 
+    /**
+     * Парсинг данных о студенте.
+     * @param titles Заголовки колонок
+     * @param data Данные о студенте для парсинга
+     * @return Новый экземпляр студента, в котором содержится полученная информация
+     */
     private Student readStudentData(String[] titles, String[] data) {
-        var student = new Student();
+        var student = new Student(studentId++);
         for (var i = 0; i < data.length; i++) {
             StudentParser.setStudentData(student, titles[i], data[i]);
         }
         return student;
     }
 
-    private void readModulesTasksData(Student student, String[] titles, String[] attrs, ArrayList<ModuleParser> modules) {
+    /**
+     * Парсит информацию о баллах студента по заданиям курса.
+     * @param student Студент, данные которого обрабатываются
+     * @param titles Список заголовков названий заданий
+     * @param attrs Список баллов для парсинга
+     * @param modules Список модулей, по которым необходимо парсить
+     * @param maxPoints Список максимальных количеств баллов для каждого задания
+     */
+    private void readModulesTasksData(Student student, String[] titles, String[] attrs, ArrayList<ModuleParser> modules,
+                                      String[] maxPoints) {
         var m = new ArrayDeque<ModuleParser>(modules); // TODO
         var module = m.pop();
 
@@ -86,10 +128,17 @@ public class CSVUlearnReader {
             }
 
             module.setStatistic(student.getId(), titles[i], attrs[i]); // общая статистика студента по типу задания (если это оно)
-            module.setTask(student.getId(), titles[i], attrs[i]); // статистика студента по конкретному заданию (если это оно)
+            module.setTask(student.getId(), titles[i], attrs[i], i, maxPoints); // статистика студента по конкретному заданию (если это оно)
         }
     }
 
+    /**
+     * Записывает полученные данные в файл.
+     * @param path Путь до файла
+     * @param writeStudents Нужно ли записывать информацию о студентах
+     * @param writeModules Нужно ли записывать информацию о модулях
+     * @throws IOException
+     */
     public void write(String path, boolean writeStudents, boolean writeModules) throws IOException {
         var write = new StringBuilder();
         var stud = students.toArray();
@@ -122,6 +171,12 @@ class StudentParser {
     private static final String nameField = "Фамилия Имя";
     private static final String groupField = "Группа";
 
+    /**
+     * Устанавливает полученные данные в студента.
+     * @param student Студент
+     * @param title Имя студента
+     * @param value Группа студента
+     */
     public static void setStudentData(Student student, String title, String value) {
         if (Objects.equals(title, nameField)) {
             student.setName(value);
@@ -133,21 +188,21 @@ class StudentParser {
 }
 
 class ModuleParser {
-    private static final String activityField = "Акт";
-    private static final String trainingField = "Упр";
-    private static final String practiceField = "ДЗ";
-    private static final String simenarField = "Сем";
-    private static final String cqField = "КВ";
-    private static final String trainingTaskField = "Упр:";
-    private static final String practiceTaskField = "ДЗ:";
-    private static final String cqTaskField = "КВ:";
+    private static final String activityField = "акт";
+    private static final String trainingField = "упр";
+    private static final String practiceField = "дз";
+    private static final String simenarField = "сем";
+    private static final String cqField = "кв";
+    private static final String trainingTaskField = "упр:";
+    private static final String practiceTaskField = "дз:";
+    private static final String cqTaskField = "кв:";
 
     private final int numCol;
     private final Module module;
 
-    public ModuleParser(String name, int numCol) {
+    public ModuleParser(String name, int id, int numCol) {
         this.numCol = numCol;
-        module = new Module(name);
+        module = new Module(name, id);
     }
 
     public int getNumCol() {
@@ -157,12 +212,37 @@ class ModuleParser {
         return module;
     }
 
+    /**
+     * Устанавливает макс. количество баллов для полей общей статистики по заданиям в модуле.
+     * @param title Нзвание поля
+     * @param value Макс. значение
+     */
+    public void setMaxPoints(String title, String value) {
+        if (module.getMaxPoints() == null) { // TODO так то не надо
+            module.setMaxPoints(new MaxPointModuleStatistic(module.getId()));
+        }
+
+        switch (title.toLowerCase()) {
+            case trainingField -> module.getMaxPoints().setPoint("training", Integer.parseInt(value));
+            case practiceField -> module.getMaxPoints().setPoint("practice", Integer.parseInt(value));
+            case cqField -> module.getMaxPoints().setPoint("cq", Integer.parseInt(value));
+            case activityField -> module.getMaxPoints().setPoint("activity", Integer.parseInt(value));
+            case simenarField -> module.getMaxPoints().setPoint("simenar", Integer.parseInt(value));
+        }
+    }
+
+    /**
+     * Устанавливает, сколько баллов получил студент по полям общей статистики по заданиям в модуле.
+     * @param studentId Внутренний ID студента
+     * @param title Название поля
+     * @param value Значение
+     */
     public void setStatistic(int studentId, String title, String value) {
         if (module.getStatistic(studentId) == null) {
             module.addStatistic(studentId, new ModuleStudentStatistic(module.getId(), studentId));
         }
 
-        switch (title) {
+        switch (title.toLowerCase()) {
             case trainingField -> module.getStatistic(studentId).setPoint("training", Integer.parseInt(value));
             case practiceField -> module.getStatistic(studentId).setPoint("practice", Integer.parseInt(value));
             case cqField -> module.getStatistic(studentId).setPoint("cq", Integer.parseInt(value));
@@ -171,25 +251,36 @@ class ModuleParser {
         }
     }
 
-    public void setTask(int studentId, String title, String value) {
-        if (title.toUpperCase().contains(trainingTaskField.toUpperCase())) {
-            var training = module.getTraining(title);
+    /**
+     * Устанавливает, сколько баллов получил студент за задание.
+     * @param studentId Внутренний ID студента
+     * @param title Название задания
+     * @param value Значение
+     * @param index Порядковый номер колонки в таблице (необходим для дальнейшего правильного парсинга)
+     * @param maxPoints Макс. баллы, которые можно получить за задание (необходимо при инициализации задания)
+     */
+    public void setTask(int studentId, String title, String value, int index, String[] maxPoints) {
+        if (title.toLowerCase().contains(trainingTaskField)) {
+            var training = module.getTraining(title + " | " + index);
             if (training == null) {
-                training = new Training(title);
+                training = new Training(title + " | " + index, index);
+                training.setMaxPoint(Integer.parseInt(maxPoints[index]));
                 module.addTask(training);
             }
             training.addPoint(studentId, Integer.parseInt(value));
-        } else if (title.contains(practiceTaskField)) {
-            var practice = module.getPractice(title);
+        } else if (title.toLowerCase().contains(practiceTaskField)) {
+            var practice = module.getPractice(title + " | " + index);
             if (practice == null) {
-                practice = new Practice(title);
+                practice = new Practice(title + " | " + index, index);
+                practice.setMaxPoint(Integer.parseInt(maxPoints[index]));
                 module.addTask(practice);
             }
             practice.addPoint(studentId, Integer.parseInt(value));
-        } else if (title.contains(cqTaskField)) {
-            var cq = module.getControlQuestions(title);
+        } else if (title.toLowerCase().contains(cqTaskField)) {
+            var cq = module.getControlQuestions(title + " | " + index);
             if (cq == null) {
-                cq = new ControlQuestion(title);
+                cq = new ControlQuestion(title + " | " + index, index);
+                cq.setMaxPoint(Integer.parseInt(maxPoints[index]));
                 module.addTask(cq);
             }
             cq.addPoint(studentId, Integer.parseInt(value));
